# metalmetrics

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: ci.yml
config/: config.yml
script/: build.sh  install.sh  lint.sh  test.sh
src/: main.rs
src/arg/: arg.rs  arg_test.rs
src/cmd/: argument.rs
src/config/: config.rs  config.yml  config_test.rs
src/flow/: build.rs  flow.proto  flow.rs  flow_test.rs
src/metrics/: metrics.rs  metrics_test.rs  mod.rs
src/printer/: mod.rs  printer.rs  printer_test.rs
