# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "metalmetrics-rs"
version = "0.0.9"
edition = "2021"
authors = ["Jia Jia <angersax@sina.com>"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
description = "Metal metrics in Rust"
repository = "https://github.com/craftslab/metalmetrics-rs"
documentation = "https://github.com/craftslab/metalmetrics-rs"
homepage = "https://github.com/craftslab/metalmetrics-rs"
keywords = ["metal", "metrics", "rust"]
categories = ["metrics"]
license = "MIT"
readme = "README.md"
build = "src/flow/build.rs"

[dependencies]
clap = "3.0.0-beta.4"
futures = "0.3.17"
heim = { version = "0.1.0-rc.1", features = ["cpu", "disk", "host", "net"] }
prost = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
smol = "1.2.5"
tokio = {version = "1.12.0", features = ["rt-multi-thread"]}
tonic = "0.6.1"

[build-dependencies]
tonic-build = "0.6.0"

[badges]
maintenance = { status = "actively-developed" }
